# lazy-gltf2

./: .gitignore  README.md  lazy-gltf2.sln
example/: example.vcxproj  example.vcxproj.filters
example/src/: example.cpp
include/: lazy_gltf2.hpp  lib64.hpp
unittests/: CMakeLists.txt  unittests.vcxproj  unittests.vcxproj.filters
unittests/src/: common.hpp  main_tests.cpp  test_AnimatedMorphCube.cpp  test_TwoSidedPlane.cpp  test_boombox.cpp  test_box.cpp  test_cameras.cpp  test_duck.cpp  test_lantern.cpp  test_monster.cpp  test_strings.cpp
